...
        android:text="Set Lokasi"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@id/tv_location"
        app:layout_constraintTop_toBottomOf="@id/tv_location" />

    <EditText
        android:id="@+id/ed_text"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_form"
...
        android:text="Voice"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@id/btn_maps"
        app:layout_constraintTop_toBottomOf="@id/ed_text" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:text="Submit"
...
